--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,32 @@ code {
     color: #fff;
 }
 
+/* Custom Dark Modal styles */
+.custom-dark-modal .ant-modal-content {
+    background-color: #1f1f1f;
+}
+
+.custom-dark-modal .ant-modal-header {
+    background-color: #1f1f1f;
+    border-bottom: 1px solid #303030;
+}
+
+.custom-dark-modal .ant-modal-title {
+    color: #fff !important;
+}
+
+.custom-dark-modal .ant-modal-close-x {
+    color: #fff;
+}
+
+.custom-dark-modal .ant-form-item-required {
+    color: #fff !important;
+}
+
+.custom-dark-modal .ant-form-item-label>label {
+    color: #fff;
+}
+
 /* Dark theme overrides for Ant Design components */
 .ant-form-item-label>label {
     color: #fff !important;
