--- a/src/pages/admin/login/AdminLogin.css
+++ b/src/pages/admin/login/AdminLogin.css
@@ -14,7 +14,7 @@
 
 .admin-login-box .ant-card-head-title {
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .admin-login-box {
@@ -74,6 +74,13 @@
     text-align: center;
     margin-bottom: 1.5rem;
     color: #333;
+}
+
+.admin-login-title {
+    text-align: center;
+    margin-bottom: 24px;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .form-group {
